--- a/Git Intro & How to hand your homework.ipynb
+++ b/Git Intro & How to hand your homework.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go to the [DM Lab 1 Repo](https://github.com/EvaArevalo/DM19-Lab1-Master) in Git,\n",
+    "Go to the [DM Lab 1 Repo](https://github.com/fhcalderon87/DM2020-Lab1-Master) in Git,\n",
     "and fork a copy by clicking the \"Fork\" button as shown below:\n",
     "    "
    ]
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And it will redirect you to a \"copy\" of the code in your own page. Once in your page (check that your name shows up at the top left corner), Click the green button \"Clone or download\", and the clipboard button besides the lnk that pops up."
+    "And it will redirect you to a \"copy\" of the code in your own page. Once in your page (check that your name shows up at the top left corner), Click the green button \"Code\", and the clipboard button besides the lnk that pops up."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your homework will be located in the path \"yourpath\" (in this example, the \"Downloads\" folder) in a folder named \"DMLab1\". You can open a Jupyter Notebook server and search for the folder DMLab1. You can then double click on the \"DM19-Lab1-Master.ipynb\" notebook and open. \n",
+    "Your homework will be located in the path \"yourpath\" (in this example, the \"Downloads\" folder) in a folder named \"DMLab1\". You can open a Jupyter Notebook server and search for the folder DMLab1. You can then double click on the \"DM2020-Lab1-Master.ipynb\" notebook and open. \n",
     "\n",
     "You can then start to edit!"
    ]
@@ -122,9 +122,9 @@
     "    cd DMLab1\n",
     "    git add *\n",
     "    git commit -m \"yourmessage\"\n",
-    "    git push\n",
+    "    git push --repo=<repository>\n",
     "    \n",
-    "You can replace \"yourmessage\" woth something like \"Finished Ex1 and Ex2. Added graph for Ex. 6\" . You can save and commit as often as you like. Below is an example:"
+    "You can replace \"yourmessage\" with something like \"Finished Ex1 and Ex2. Added graph for Ex. 6\" . You can save and commit as often as you like. Below is an example:"
    ]
   },
   {
@@ -145,13 +145,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go to the [DM Lab 1 Homework 1 Repo](https://github.com/EvaArevalo/DM19-Lab1-Homework1) in Git and follow the same process above.  Make sure to commit and save your changes to your repository __BEFORE the deadline (Oct. 29th 11:59 pm, Tuesday)__. \n",
+    "Go to the [DM Lab 1 Homework 1 Repo](https://github.com/fhcalderon87/DM2020-Lab1-Homework1) in Git and follow the same process above.  Make sure to commit and save your changes to your repository __BEFORE the deadline (Oct. 22nd 11:59 pm, Thursday)__. \n",
     "\n",
     "Make sure your notebook includes: \n",
-    "1. Take home exercises from [Lab 1](https://github.com/EvaArevalo/DM19-Lab1-Master)\n",
+    "1. Take home exercises from [Lab 1](https://github.com/fhcalderon87/DM2020-Lab1-Master)\n",
     "2. The homework itself\n",
     "\n",
-    "When you're done (or at any moment), find your repository link. Open the **\\[DM19\\] Homework 1** assignment page on our [eLearn platform](https://elearn.nthu.edu.tw/). Make a submission and paste the link to your git repository (or the link to your kaggle kernel). \n",
+    "When you're done (or at any moment), find your repository link. Open the **\\[DM2020\\] Homework 1** assignment page on our [eLearn platform](https://elearn.nthu.edu.tw/). Make a submission and paste the link to your git repository (or the link to your kaggle kernel). \n",
     "\n",
     "You can find your repository link by logging into [Github](https://github.com/), clicking on your profile icon on the upper right corner, selecting \"Your repositories\", and clicking on the name of your repository . Then copy the link in your browser. \n",
     "\n",
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
