--- a/Git Intro & How to hand your homework.ipynb
+++ b/Git Intro & How to hand your homework.ipynb
@@ -122,7 +122,7 @@
     "    cd DMLab1\n",
     "    git add *\n",
     "    git commit -m \"yourmessage\"\n",
-    "    git push --repo=<repository>\n",
+    "    git push \n",
     "    \n",
     "You can replace \"yourmessage\" with something like \"Finished Ex1 and Ex2. Added graph for Ex. 6\" . You can save and commit as often as you like. Below is an example:"
    ]
